trying to fix the image on IE and Safari

--- a/style.css
+++ b/style.css
@@ -12,3 +12,6 @@ a:hover{text-shadow:0 0 10px #0ff;}
 #top,#bottom{text-align:center;}
 #mb{filter:blur(5px);position:relative;left:110px;}
 #m{position:relative;left:-100px;}
+/* Targets Safari 7.1+ */
+_::-webkit-full-page-media,_:future,:root #mb{display:none;}
+_::-webkit-full-page-media,_:future,:root #m{position:static;}
